@@ -3,9 +3,13 @@
 	adjust the mousetrap keybindings. Set a timer of one second to
 	properly block edge-actions after mousetrapping
 
-	* lisp/sawfish/gtk/image.jl: due two fixes in rep-gtk it's possible
+	* lisp/sawfish/gtk/widgets/image.jl: due two fixes in rep-gtk it's possible
 	now to set the filename in GtkFileChooserButton, so the GtkEntry is
 	removed
+
+	* configure.in: bump minimum GTK+ to 2.24
+
+	* lisp/sawfish/gtk/widget.jl: port 'choice widget to GtkComboBoxText
 
 2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/mousetrap.jl: added mousetrapping feature,
